--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,19 +5,23 @@ foreach(TEST_SRC ${TEST_SOURCES})
   target_link_libraries(${TEST_SRC_NAME}
     succinct
     ${Boost_LIBRARIES}
+    pthread
     )
   add_test(${TEST_SRC_NAME} ${TEST_SRC_NAME})
 endforeach(TEST_SRC)
 
 target_link_libraries(test_block_codecs
     FastPFor_lib
-    block_codecs)
+    block_codecs
+    pthread)
 
 target_link_libraries(test_block_posting_list
     FastPFor_lib
-    block_codecs)
+    block_codecs
+    pthread)
 
 target_link_libraries(test_block_freq_index
     FastPFor_lib
-    block_codecs)
+    block_codecs
+    pthread)
 
